# Inskea

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json
src/: app.rs  hotkeys.rs  main.rs  skea.rs  tauri_bridge.rs  util.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/canvas/: grid.rs  mod.rs  modes.rs  selection.rs  settings.rs  state.rs  text_edit.rs  viewport.rs
src/model/: color.rs  element.rs  mod.rs  point.rs  resize.rs
src/model/elements/: arrow.rs  ellipse.rs  freehand.rs  line.rs  mod.rs  path.rs  rect.rs  text.rs  utils.rs
src/ui/: classes.rs  export.rs  file_ops.rs  icon.rs  mod.rs  settings.rs  status_bar.rs  styles.rs  toolbar.rs
src/ui/components/: color_picker.rs  dropdown.rs  icon_btn.rs  mod.rs  number_slider.rs  segmented.rs  styling_panel.rs
src/ui/dock/: colors.rs  drawing.rs  group.rs  mod.rs  pages.rs
