[package]
name = "inskea"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DomRect", "Blob", "BlobPropertyBag", "Url", "HtmlInputElement", "HtmlElement", "FileReader", "ProgressEvent", "FileList", "File"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = "1"

[profile.release]
opt-level = 'z'
lto = true
