[package]
name = "inskea"
version = "0.1.0"
authors = ["Quippy22"]
license = "MIT"
repository = "https://github.com/Quippy22/Inskea"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["DomRect", "Blob", "BlobPropertyBag", "Url", "HtmlInputElement", "HtmlElement", "FileReader", "ProgressEvent", "FileList", "File", "console"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
serde_json = "1"

[profile.release]
opt-level = 'z'
lto = true
